--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,23 @@
     text-align: center;
   }
   
-
+  .image-containere {
+  
+    
+    right: 20px;
+    text-align: center;
+   
+    
+  }
+  
+  .foto {
+    width: 100px;
+    margin-top: 20px;
+    margin-left: 20px;
+  }
+  
+  
+  
 
 
   .pequena {
@@ -55,7 +71,8 @@ body.about {
 
 .btn-back {
   position: absolute;
-  top: 10px; 
+  top: 10px;
+  color: white; 
   left: 20px;
   background-color: rgb(211, 173, 91);;
   border-color: rgb(211, 173, 91);;
